force-app/main/default/objects/Job_Application__c/fields/JD__c.field-meta.xml
<CustomField>
    <fullName>JD__c</fullName>
    <label>JD</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>