force-app/main/default/objects/Job_Application__c/fields/Openings__c.field-meta.xml
<CustomField>
    <fullName>Openings__c</fullName>
    <label>Openings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>