force-app/main/default/objects/Job_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Description__c</columns>
    <columns>Openings__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Required_Skills__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>